--- a/PtmClient/src/application/application.css
+++ b/PtmClient/src/application/application.css
@@ -1,1 +1,11 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.anchor {
+    -fx-background-image:url('file:///C:/Users/ehatchuel/git/PTM2/PtmClient/src/resources/pane.jpg');
+}
+.button {
+ -fx-text-fill: white;
+    -fx-font-family: "Arial Narrow";
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    
+    }
