--- a/PtmClient/src/application/MainWindow.fxml
+++ b/PtmClient/src/application/MainWindow.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import application.MazeDisplayer?> 
+<?import application.MazeDisplayer?>
 
-<BorderPane prefHeight="320.0" prefWidth="434.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
+<BorderPane prefHeight="500.00" prefWidth="500.00" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -20,47 +20,46 @@
             <items>
               <MenuItem mnemonicParsing="false" onAction="#loadLevel" text="LoadLevel" />
               <MenuItem mnemonicParsing="false" onAction="#saveLevel" text="SaveLevel" />
-                  
-              <MenuItem mnemonicParsing="false" text="Close" />
+
+              <MenuItem mnemonicParsing="false" text="" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem mnemonicParsing="false" text="" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Help">
+          <Menu mnemonicParsing="false" text="Theme">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
+            <MenuItem mnemonicParsing="false" onAction="#theWallSong" text="Wall" />
+             <MenuItem mnemonicParsing="false" onAction="#ECLIPSE" text="Eclipse" />
+             </items>
           </Menu>
         </menus>
       </MenuBar>
    </top>
+
    <left>
       <VBox prefHeight="254.0" prefWidth="82.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#solve" prefHeight="27.0" prefWidth="61.0" text="Solve" />
-            <Button mnemonicParsing="false" onAction="#Garden" prefHeight="27.0" prefWidth="61.0" text="Wall" />
-            <Button mnemonicParsing="false" onAction="#Dark" prefHeight="27.0" prefWidth="61.0" text="Eclipse" />
-              <Button mnemonicParsing="false" onAction="#checkCompletion" prefHeight="27.0" prefWidth="61.0" text="Check" />
-           
-             <Button mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="27.0" prefWidth="61.0" text="Connect" />
+            <Button mnemonicParsing="false" onAction="#solve" prefHeight="30.0" prefWidth="61.0" text="Solve" />
             
+             <Button mnemonicParsing="false" onAction="#checkCompletion" prefHeight="30.0" prefWidth="61.0" text="Check" />
              
-            
+             <Button mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="30.0" prefWidth="61.0" text="Connect" />
          </children>
          <BorderPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="10.0" left="8.0" right="5.0" top="5.0" />
          </BorderPane.margin>
       </VBox>
    </left>
    <bottom>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <Label text="Status">
+          
+            <Label text="">
                <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
             </Label>
          </children>
@@ -68,6 +67,6 @@
    </bottom>
    <center>
      <MazeDisplayer fx:id="mazeDisplayer" height="300.0" width="300.0" BorderPane.alignment="CENTER" />
-  
+
    </center>
 </BorderPane>
